<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Visit Seattle</string>

    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="category_hotels">Hotels</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="category_restaurants">Restaurants</string>

    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="category_museums">Museums</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_malls">Malls</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_gardens">Gardens</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
